@@ -11,6 +11,8 @@ Yang Tse (14 Jul 2008)
   file has been included. In this way if symbol is defined in the config file
   it will no longer be ignored.
 
+- Removed inclusion of remaining system header files from configuration files.
+
 Yang Tse (11 Jul 2008)
 - Added missing multiple header inclusion prevention definition for header
   file content_encoding.h
